examples/test/testpolicy17580.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17580
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key11: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value41
      podSelector:
        matchLabels:
          key32: value46
          key39: value21
          key45: value20
